<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context=".MainActivity">

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fontFamily="sans-serif-light"
    android:gravity="center_horizontal"
    android:padding="@dimen/topic_padding"
    android:text="@string/topic"
    android:textColor="@android:color/black"
    android:textSize="@dimen/topic_size" />

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="@dimen/questions_layout_padding">

      <TextView
        style="@style/TextTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question1" />

      <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/layout_padding">

        <EditText
          android:id="@+id/first_answer"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/edit_text_answer_hint"
          android:inputType="textMultiLine" />
      </LinearLayout>

      <TextView
        style="@style/TextTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question2" />

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/layout_padding">

        <EditText
          android:id="@+id/second_answer"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/edit_text_answer_hint"
          android:inputType="textMultiLine" />
      </LinearLayout>

      <TextView
        style="@style/TextTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question3" />


      <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/layout_padding">

        <RadioButton
          android:id="@+id/true_radio_btn"
          style="@style/AnswerTheme"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/answer_true" />

        <RadioButton
          android:id="@+id/false_radio_btn"
          style="@style/AnswerTheme"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/answer_false" />

      </RadioGroup>

      <TextView
        style="@style/TextTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question4" />

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/layout_padding">

        <CheckBox
          android:id="@+id/linear_layout_checkbox"
          style="@style/AnswerTheme"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/answer_viewgroups1" />

        <CheckBox
          android:id="@+id/text_view_checkbox"
          style="@style/AnswerTheme"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/answer_viewgroups2" />

        <CheckBox
          android:id="@+id/checkbox_checkbox"
          style="@style/AnswerTheme"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/answer_viewgroups3" />

        <CheckBox
          android:id="@+id/relative_layout_checkbox"
          style="@style/AnswerTheme"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/answer_viewgroups4" />
      </LinearLayout>

      <TextView
        style="@style/TextTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question5" />

      <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/layout_padding">

        <RadioButton
          android:id="@+id/button_radio_btn"
          style="@style/AnswerTheme"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/answer_button1" />

        <RadioButton
          android:id="@+id/view_radio_btn"
          style="@style/AnswerTheme"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/answer_button2" />

        <RadioButton
          android:id="@+id/radio_button_radio_btn"
          style="@style/AnswerTheme"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/answer_button3" />

      </RadioGroup>

      <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:onClick="checkResults"
        android:text="@string/check_result_btn"
        android:textColor="@android:color/white" />
    </LinearLayout>
  </ScrollView>
</LinearLayout>
